--- a/index-contact.html
+++ b/index-contact.html
@@ -19,21 +19,21 @@
 					<header id="header">
 					<p align="center">
                                                 <a href="#"><span class="https://telegra.ph/file/7a6921977638260a22127.jpg"><img width='200' height='200' src="https://telegra.ph/file/7a6921977638260a22127.jpg" alt=""> </a></span>
-						<h1>SafwanGanz's Site</h1>
+						<h1>JACKZ SER SITE</h1>
 						<p>ʙᴇ ᴋɪɴᴅ ᴡʜᴇɴᴇᴠᴇʀ ᴘᴏssɪʙʟᴇ. ɪᴛ ɪs ᴀʟᴡᴀʏ ᴘᴏssɪʙʟᴇ.🙂</p>
 						<nav>
 							<ul>
-								<li><a href="https://wa.me/917012074386" class="icon brands fa-whatsapp"><span class="label">Twitter</span></a></li>
-								<li><a href="https://instagram.com/SafwanGanz" class="icon brands fa-instagram"><span class="label">Dribbble</span></a></li>
-								<li><a href="https://github.com/SafwanGanz" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="SafwanGanz1@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://wa.me/918075641889" class="icon brands fa-whatsapp"><span class="label">Twitter</span></a></li>
+								<li><a href="https://instagram.com/safxr._" class="icon brands fa-instagram"><span class="label">Dribbble</span></a></li>
+								<li><a href="https://github.com/Jackz-ser" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="jackzwizard@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
 					</header>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">© a_j_f_x; <a href="http://github.com/SafwanGanz">SafwanGanz</a>.</span>
+						<span class="copyright">© Jackz; <a href="http://github.com/Jackz-ser">SafwanGanz</a>.</span>
 					</footer>
 
 			</div>
